--- a/index.html
+++ b/index.html
@@ -1,81 +1,242 @@
-<!DOCTYPE html>
-<!--[if IEMobile 7 ]>    <html class="no-js iem7"> <![endif]-->
-<!--[if (gt IEMobile 7)|!(IEMobile)]><!-->
-<html class="no-js">
-<!--<![endif]-->
+<!DOCTYPE HTML>
+<!--
+	Tessellate 1.0 by HTML5 UP
+	html5up.net | @n33co
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
 <head>
-<meta charset="utf-8">
-<title>Nick Kupka's first mobile Site</title>
-<meta name="description" content="">
-<meta name="HandheldFriendly" content="True">
-<meta name="MobileOptimized" content="320">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="cleartype" content="on">
-
-<link rel="apple-touch-icon-precomposed" sizes="144x144"
-	href="img/touch/apple-touch-icon-144x144-precomposed.png">
-<link rel="apple-touch-icon-precomposed" sizes="114x114"
-	href="img/touch/apple-touch-icon-114x114-precomposed.png">
-<link rel="apple-touch-icon-precomposed" sizes="72x72"
-	href="img/touch/apple-touch-icon-72x72-precomposed.png">
-<link rel="apple-touch-icon-precomposed"
-	href="img/touch/apple-touch-icon-57x57-precomposed.png">
-<link rel="shortcut icon" href="img/touch/apple-touch-icon.png">
-
-<!-- Tile icon for Win8 (144x144 + tile color) -->
-<meta name="msapplication-TileImage"
-	content="img/touch/apple-touch-icon-144x144-precomposed.png">
-<meta name="msapplication-TileColor" content="#222222">
-
-
-<!-- For iOS web apps. Delete if not needed. https://github.com/h5bp/mobile-boilerplate/issues/94 -->
-<!--
-        <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="apple-mobile-web-app-status-bar-style" content="black">
-        <meta name="apple-mobile-web-app-title" content="">
-        -->
-
-<!-- This script prevents links from opening in Mobile Safari. https://gist.github.com/1042026 -->
-<!--
-        <script>(function(a,b,c){if(c in b&&b[c]){var d,e=a.location,f=/^(a|html)$/i;a.addEventListener("click",function(a){d=a.target;while(!f.test(d.nodeName))d=d.parentNode;"href"in d&&(d.href.indexOf("http")||~d.href.indexOf(e.host))&&(a.preventDefault(),e.href=d.href)},!1)}})(document,window.navigator,"standalone")</script>
-        -->
-
-<link rel="stylesheet" href="css/normalize.css">
-<link rel="stylesheet" href="css/main.css">
-<script src="js/vendor/modernizr-2.6.2.min.js"></script>
+<title>Nick Kupka First Mobile Test</title>
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<meta name="description" content="" />
+<meta name="keywords" content="" />
+<link
+	href="http://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,400,400italic"
+	rel="stylesheet" type="text/css" />
+<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+<script src="js/jquery.min.js"></script>
+<script src="js/skel.min.js"></script>
+<script src="js/init.js"></script>
+<noscript>
+	<link rel="stylesheet" href="css/skel-noscript.css" />
+	<link rel="stylesheet" href="css/style.css" />
+	<link rel="stylesheet" href="css/style-wide.css" />
+</noscript>
+<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
 </head>
 <body>
-	<header>Some header</header>
-	<!-- Add your site or application content here -->
-	<h1>IRGENDEINE ÜBERSCHRIFT</h1>
 
-	<video width="320" height="240" controls>
-		<source src="videos/big_buck_bunny.mp4" type="video/mp4">
-		<source src="videos/big_buck_bunny.ogv" type="video/ogg">
-		Your browser does not support the video tag.
-	</video>
+	<!-- Header -->
+	<section id="header" class="dark">
+		<header style="margin-top: -150px">
+			<h1>Welcome to Nick Kupkas first mobile testpage</h1>
+			<p></p>
+			<video " width="320" height="240" controls>
+				<source src="videos/big_buck_bunny.mp4" type="video/mp4">
+				<source src="videos/big_buck_bunny.ogv" type="video/ogg">
+				Your browser does not support the video tag.
+			</video>
+			<p>
+				A free responsive site template by <a href="http://html5up.net/">HTML5
+					UP</a>
+			</p>
+		</header>
+		<footer>
+			<a href="#first" class="button scrolly">Go to AWF Biography</a> <a
+				href="#fourth" class="button scrolly">Go to IMPRESSUM</a>
+		</footer>
+	</section>
 
-	<video width="320" height="240" controls>
-		<source src="videos/big_buck_bunny.mp4" type="video/mp4">
-		<source src="videos/big_buck_bunny.ogv" type="video/ogg">
-		<track src="subtitles_en.vtt" kind="subtitles" srclang="en"
-			label="English"> <track src="subtitles_no.vtt"
-			kind="subtitles" srclang="no" label="Norwegian">
-	</video>
-	<script src="js/vendor/zepto.min.js"></script>
-	<script src="js/helper.js"></script>
+	<!-- First -->
+	<section id="first" class="main">
+		<header>
+			<div class="container">
+				<h2>And we Fall Biography</h2>
+				<p>
+					And we fall is a hardcore band from Frankfurt am Main / Hessen /
+					Germany. Consisting of vocalist Phil Ambas, vocalist and<br>
+					guitarist Nick EBDT, drummer RawMan, bassist Manu aKa Breekatchu
+					and guitarist Tommy Darko, the band has traveled throughout Germany
+					with a unique and award-winning live stage show. Within a short<br>
+					time the band gave respect and a name in the German hardcore scene.
+					<br> Following the release of the first EP "Casino Break Down"
+					in early 2013, the management and booking agency "FDM Music" was
+					aware of the band and took them under contract. The confirmation of
+					the<br> success of the band recorded not only appeared in
+					major German cities again but also a passion for creating and
+					developing the sounds. Thus, continuous work on other songs and
+					plates is a must<br> for the band. Clothing Technically, the
+					guys move in their specially Developed Style "YoloCore". Flashy and
+					extravagant mix which interests the current youth period with a
+					base of hardcore.<br> During the "North and Beyond Tour" of
+					2013, the fan base grew tremendously and rightly reflected the
+					achievements of the band. <br> And we fall is a hardcore band
+					designed for live gigs and being close to the audience.
+				</p>
+			</div>
+		</header>
+		<div class="content dark style1 featured">
+			<div class="container">
+				<div class="row">
+					<div class="4u">
+						<section>
+							<span class="feature-icon"><span class="fa fa-clock-o"></span></span>
+							<header>
+								<h3>Gravida</h3>
+							</header>
+							<p>Gravida dis placerat lectus ante vel nunc euismod est
+								turpis sodales. Diam tempor dui lacinia accumsan vivamus.
+								Gravida dis placerat lectus ante vel nunc euismod est turpis
+								sodales. Diam tempor dui lacinia accumsan vivamus.</p>
+						</section>
+					</div>
+					<div class="4u">
+						<section>
+							<span class="feature-icon"><span class="fa fa-bolt"></span></span>
+							<header>
+								<h3>Vivamus</h3>
+							</header>
+							<p>Gravida dis placerat lectus ante vel nunc euismod est
+								turpis sodales. Diam tempor dui lacinia accumsan vivamus.
+								Gravida dis placerat lectus ante vel nunc euismod est turpis
+								sodales. Diam tempor dui lacinia accumsan vivamus.</p>
+						</section>
+					</div>
+					<div class="4u">
+						<section>
+							<span class="feature-icon"><span class="fa fa-cloud"></span></span>
+							<header>
+								<h3>Accumsan</h3>
+							</header>
+							<p>Gravida dis placerat lectus ante vel nunc euismod est
+								turpis sodales. Diam tempor dui lacinia accumsan vivamus.
+								Gravida dis placerat lectus ante vel nunc euismod est turpis
+								sodales. Diam tempor dui lacinia accumsan vivamus.</p>
+						</section>
+					</div>
+				</div>
+				<div class="row">
+					<div class="12u">
+						<footer>
+							<a href="#second" class="button scrolly">Gravida tempor
+								lacinia</a>
+						</footer>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 
-	<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-	<script>
-		var _gaq = [ [ "_setAccount", "UA-XXXXX-X" ], [ "_trackPageview" ] ];
-		(function(d, t) {
-			var g = d.createElement(t), s = d.getElementsByTagName(t)[0];
-			g.async = 1;
-			g.src = ("https:" == location.protocol ? "//ssl" : "//www")
-					+ ".google-analytics.com/ga.js";
-			s.parentNode.insertBefore(g, s)
-		}(document, "script"));
-	</script>
-	<footer>Irgendein FOOTER</footer>
+	<!-- Fourth -->
+	<section id="fourth" class="main">
+		<header>
+
+			<h2>IMPRESSUM</h2>
+		</header>
+
+		<div class="content style4 featured">
+			<div class="content" id="impressum">
+				<p></p>
+				<b>Owner:</b>
+				<p>
+					Nick Kupka<br> Sch&auml;ferstrasse 20<br> 61381
+					Friedrichsdorf<br>
+				</p>
+				<b>E-Mail: nick.kupka(a t)gmail.com </b>
+				<p>All rights belong to Nick Kupka</p>
+				<hr>
+				<h3>Haftung f&uuml;r Inhalte</h3>
+				<br>Obwohl wir uns um Aktualit&auml;t, <br>
+				Vollst&auml;ndigkeit und Richtigkeit der Inhalte unserer Seiten
+				bem&uuml;hen, <br> k&ouml;nnen wir hierf&uuml;r keine Garantie
+				&uuml;bernehmen. Nach § 7 Absatz 1 TMG <br> sind wir als
+				Diensteanbieter f&uuml;r eigene Inhalte auf unseren Seiten <br>
+				nach den allgemeinen Gesetzen verantwortlich. Eine Verpflichtung zur
+				<br> &uuml;berwachung &uuml;bermittelter oder gespeicherter
+				fremder Informationen <br> besteht jedoch nicht (§§ 8-10 TMG).
+				Sobald uns Rechtsverst&ouml;ße <br> bekannt werden, werden wir
+				die entsprechenden Inhalte umgehend <br> entfernen. Eine
+				dahingehende Haftung wird jedoch erst ab dem <br> Zeitpunkt der
+				Kenntnis konkreter Rechtsverletzungen &uuml;bernommen. <br> <br>
+				<h3>Haftung f&uuml;r Links</h3>
+				<br> Unsere Seiten enthalten Links auf externe <br>
+				Webseiten Dritter. Auf die Inhalte dieser direkt oder indirekt <br>
+				verlinkten Webseiten haben wir keinen Einfluss. F&uuml;r die
+				Richtigkeit <br> der Inhalte ist immer der jeweilige Anbieter
+				oder Betreiber <br> verantwortlich, weshalb wir
+				diesbez&uuml;glich keinerlei Gew&auml;hr <br> &uuml;bernehmen.
+				Die fremden Webseiten haben wir zum Zeitpunkt der <br>
+				Verlinkung auf m&ouml;gliche Rechtsverst&ouml;ße
+				&uuml;berpr&uuml;ft. Zum Zeitpunkt der <br> Verlinkung waren
+				keinerlei Rechtsverletzungen erkennbar. Eine <br> st&auml;ndige
+				&uuml;berpr&uuml;fung s&auml;mtlicher Inhalte der von uns verlinkten
+				<br> Seiten ohne tats&auml;chliche Anhaltspunkte f&uuml;r einen
+				Rechtsverstoß <br> k&ouml;nnen wir nicht leisten. Falls uns
+				Rechtsverletzungen bekannt <br> werden, werden wir die
+				entsprechenden Links sofort entfernen. <br> <br>
+				<h3>Urheberrecht</h3>
+				<br> Die durch den Betreiber dieser Seite erstellten Inhalte <br>
+				und Werke auf diesen Webseiten unterliegen dem deutschen <br>
+				Urheberrecht. S&auml;mtliche Beitr&auml;ge Dritter sind als solche <br>
+				gekennzeichnet. Die Vervielf&auml;ltigung, Bearbeitung, Verbreitung
+				und <br> jede Art der Verwertung außerhalb der Grenzen des
+				Urheberrechts <br> bed&uuml;rfen der schriftlichen Zustimmung
+				des jeweiligen Autors bzw. <br> Erstellers. Kopien von diesen
+				Seiten sind nur f&uuml;r den privaten <br> Bereich gestattet,
+				nicht jedoch f&uuml;r kommerzielle Zwecke.<br> <br>
+				<h3>Datenschutz</h3>
+				<br> F&uuml;r die Sicherheit der Daten&uuml;bertragung im
+				Internet k&ouml;nnen wir keine <br> Gew&auml;hr
+				&uuml;bernehmen, insbesondere besteht bei der &uuml;bertragung von <br>
+				Daten per E-Mail die Gefahr des Zugriffs durch Dritte. Im Falle der
+				<br> Erhebung personenbezogener oder gesch&auml;ftlicher Daten
+				<br> (E-Mail-Adressen, Namen, Anschriften) auf unseren Seiten
+				erfolgt die <br> Preisgabe dieser Daten seitens des Nutzers
+				stets auf freiwilliger <br> Basis. Die Inanspruchnahme und
+				Bezahlung aller angebotenen Dienste <br> ist auch ohne Angabe
+				solcher Daten bzw. unter Angabe anonymisierter <br> Daten oder
+				eines Pseudonyms gestattet, soweit dies technisch m&ouml;glich <br>
+				und zumutbar ist. Einer Nutzung der im Impressum
+				ver&ouml;ffentlichten <br> Kontaktdaten durch Dritte zu
+				Werbezwecken wird hiermit ausdr&uuml;cklich <br> widersprochen.
+				Der Betreiber beh&auml;lt sich f&uuml;r den Fall unverlangt <br>
+				zugesandter Werbe- oder Informationsmaterialien ausdr&uuml;cklich <br>
+				rechtliche Schritte vor.<br> <br>
+				<h3>Rechtswirksamkeit dieses Haftungsausschlusses</h3>
+				<br> Vorstehender Haftungsausschluss ist Teil des <br>
+				Internetangebots, von dem aus auf diese Seite verwiesen wurde. <br>
+				Sollten einzelne Regelungen oder Formulierungen dieses <br>
+				Haftungsausschlusses unwirksam sein oder werden, bleiben die
+				&uuml;brigen <br> Regelungen in ihrem Inhalt und ihrer
+				G&uuml;ltigkeit hiervon unber&uuml;hrt. <br> <br> <a
+					href="http://www.anwalt-seiten.de">Quelle: anwalt-seiten.de</a>
+			</div>
+		</div>
+	</section>
+
+
+	<!-- Footer -->
+	<section id="footer">
+		<ul class="icons">
+			<li><a href="#" class="fa fa-twitter solo"><span>Twitter</span></a></li>
+			<li><a href="#" class="fa fa-facebook solo"><span>Facebook</span></a></li>
+			<li><a href="#" class="fa fa-google-plus solo"><span>Google+</span></a></li>
+			<li><a href="#" class="fa fa-dribbble solo"><span>Dribbble</span></a></li>
+			<li><a href="#" class="fa fa-github solo"><span>GitHub</span></a></li>
+		</ul>
+		<div class="copyright">
+			<ul class="menu">
+				<li>&copy; Untitled. All rights reserved.</li>
+				<li>Design: <a href="http://html5up.net/">HTML5 UP</a></li>
+				<li>Images: <a href="http://ineedchemicalx.deviantart.com">Felicia
+						Simion</a></li>
+			</ul>
+		</div>
+
+		<footer>
+			<a href="#header" class="button scrolly">Go back to the top</a>
+		</footer>
+	</section>
 </body>
 </html>
