--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 	<!-- Header -->
 	<section id="header" class="dark">
-		<header style="margin-top: -150px">
+		<header>
 			<h1>Welcome to Nick Kupkas first mobile testpage</h1>
 			<p></p>
 			<video " width="320" height="240" controls>
