design bearbeitet html5

--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@
 	<link rel="stylesheet" href="css/style.css" />
 	<link rel="stylesheet" href="css/style-wide.css" />
 </noscript>
-<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
-<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
 </head>
 <body>
 
@@ -32,7 +30,7 @@
 		<header>
 			<h1>Welcome to Nick Kupkas first mobile testpage</h1>
 			<p></p>
-			<video " width="320" height="240" controls>
+			<video width="320" height="240" controls>
 				<source src="videos/big_buck_bunny.mp4" type="video/mp4">
 				<source src="videos/big_buck_bunny.ogv" type="video/ogg">
 				Your browser does not support the video tag.
@@ -43,13 +41,11 @@
 			</p>
 		</header>
 		<footer>
-			<a href="#first" class="button scrolly">Go to AWF Biography</a> <a
-				href="#fourth" class="button scrolly">Go to IMPRESSUM</a>
+			<a href="#biography" class="button scrolly">And we Fall
+				Biographie</a> <a href="#impressum" class="button scrolly">IMPRESSUM</a>
 		</footer>
 	</section>
-
-	<!-- First -->
-	<section id="first" class="main">
+	<section id="biography" class="main">
 		<header>
 			<div class="container">
 				<h2>And we Fall Biography</h2>
@@ -76,147 +72,95 @@
 				</p>
 			</div>
 		</header>
+	</section>
+	<section id="impressum" class="main">
 		<div class="content dark style1 featured">
-			<div class="container">
-				<div class="row">
-					<div class="4u">
-						<section>
-							<span class="feature-icon"><span class="fa fa-clock-o"></span></span>
-							<header>
-								<h3>Gravida</h3>
-							</header>
-							<p>Gravida dis placerat lectus ante vel nunc euismod est
-								turpis sodales. Diam tempor dui lacinia accumsan vivamus.
-								Gravida dis placerat lectus ante vel nunc euismod est turpis
-								sodales. Diam tempor dui lacinia accumsan vivamus.</p>
-						</section>
-					</div>
-					<div class="4u">
-						<section>
-							<span class="feature-icon"><span class="fa fa-bolt"></span></span>
-							<header>
-								<h3>Vivamus</h3>
-							</header>
-							<p>Gravida dis placerat lectus ante vel nunc euismod est
-								turpis sodales. Diam tempor dui lacinia accumsan vivamus.
-								Gravida dis placerat lectus ante vel nunc euismod est turpis
-								sodales. Diam tempor dui lacinia accumsan vivamus.</p>
-						</section>
-					</div>
-					<div class="4u">
-						<section>
-							<span class="feature-icon"><span class="fa fa-cloud"></span></span>
-							<header>
-								<h3>Accumsan</h3>
-							</header>
-							<p>Gravida dis placerat lectus ante vel nunc euismod est
-								turpis sodales. Diam tempor dui lacinia accumsan vivamus.
-								Gravida dis placerat lectus ante vel nunc euismod est turpis
-								sodales. Diam tempor dui lacinia accumsan vivamus.</p>
-						</section>
-					</div>
+			<header>
+				<div class="container">
+
+					<h2>IMPRESSUM</h2>
+					<p></p>
+					<b>Owner:</b>
+					<p>
+						Nick Kupka<br> Sch&auml;ferstrasse 20<br> 61381
+						Friedrichsdorf<br>
+					</p>
+					<b>E-Mail: nick.kupka(a t)gmail.com </b>
+					<p>All rights belong to Nick Kupka</p>
+					<hr>
+					<h3>Haftung f&uuml;r Inhalte</h3>
+					<br>Obwohl wir uns um Aktualit&auml;t, <br>
+					Vollst&auml;ndigkeit und Richtigkeit der Inhalte unserer Seiten
+					bem&uuml;hen, <br> k&ouml;nnen wir hierf&uuml;r keine Garantie
+					&uuml;bernehmen. Nach § 7 Absatz 1 TMG <br> sind wir als
+					Diensteanbieter f&uuml;r eigene Inhalte auf unseren Seiten <br>
+					nach den allgemeinen Gesetzen verantwortlich. Eine Verpflichtung
+					zur <br> &uuml;berwachung &uuml;bermittelter oder
+					gespeicherter fremder Informationen <br> besteht jedoch nicht
+					(§§ 8-10 TMG). Sobald uns Rechtsverst&ouml;ße <br> bekannt
+					werden, werden wir die entsprechenden Inhalte umgehend <br>
+					entfernen. Eine dahingehende Haftung wird jedoch erst ab dem <br>
+					Zeitpunkt der Kenntnis konkreter Rechtsverletzungen
+					&uuml;bernommen. <br> <br>
+					<h3>Haftung f&uuml;r Links</h3>
+					<br> Unsere Seiten enthalten Links auf externe <br>
+					Webseiten Dritter. Auf die Inhalte dieser direkt oder indirekt <br>
+					verlinkten Webseiten haben wir keinen Einfluss. F&uuml;r die
+					Richtigkeit <br> der Inhalte ist immer der jeweilige Anbieter
+					oder Betreiber <br> verantwortlich, weshalb wir
+					diesbez&uuml;glich keinerlei Gew&auml;hr <br> &uuml;bernehmen.
+					Die fremden Webseiten haben wir zum Zeitpunkt der <br>
+					Verlinkung auf m&ouml;gliche Rechtsverst&ouml;ße
+					&uuml;berpr&uuml;ft. Zum Zeitpunkt der <br> Verlinkung waren
+					keinerlei Rechtsverletzungen erkennbar. Eine <br>
+					st&auml;ndige &uuml;berpr&uuml;fung s&auml;mtlicher Inhalte der von
+					uns verlinkten <br> Seiten ohne tats&auml;chliche
+					Anhaltspunkte f&uuml;r einen Rechtsverstoß <br> k&ouml;nnen
+					wir nicht leisten. Falls uns Rechtsverletzungen bekannt <br>
+					werden, werden wir die entsprechenden Links sofort entfernen. <br>
+					<br>
+					<h3>Urheberrecht</h3>
+					<br> Die durch den Betreiber dieser Seite erstellten Inhalte <br>
+					und Werke auf diesen Webseiten unterliegen dem deutschen <br>
+					Urheberrecht. S&auml;mtliche Beitr&auml;ge Dritter sind als solche
+					<br> gekennzeichnet. Die Vervielf&auml;ltigung, Bearbeitung,
+					Verbreitung und <br> jede Art der Verwertung außerhalb der
+					Grenzen des Urheberrechts <br> bed&uuml;rfen der schriftlichen
+					Zustimmung des jeweiligen Autors bzw. <br> Erstellers. Kopien
+					von diesen Seiten sind nur f&uuml;r den privaten <br> Bereich
+					gestattet, nicht jedoch f&uuml;r kommerzielle Zwecke.<br> <br>
+					<h3>Datenschutz</h3>
+					<br> F&uuml;r die Sicherheit der Daten&uuml;bertragung im
+					Internet k&ouml;nnen wir keine <br> Gew&auml;hr
+					&uuml;bernehmen, insbesondere besteht bei der &uuml;bertragung von
+					<br> Daten per E-Mail die Gefahr des Zugriffs durch Dritte. Im
+					Falle der <br> Erhebung personenbezogener oder
+					gesch&auml;ftlicher Daten <br> (E-Mail-Adressen, Namen,
+					Anschriften) auf unseren Seiten erfolgt die <br> Preisgabe
+					dieser Daten seitens des Nutzers stets auf freiwilliger <br>
+					Basis. Die Inanspruchnahme und Bezahlung aller angebotenen Dienste
+					<br> ist auch ohne Angabe solcher Daten bzw. unter Angabe
+					anonymisierter <br> Daten oder eines Pseudonyms gestattet,
+					soweit dies technisch m&ouml;glich <br> und zumutbar ist.
+					Einer Nutzung der im Impressum ver&ouml;ffentlichten <br>
+					Kontaktdaten durch Dritte zu Werbezwecken wird hiermit
+					ausdr&uuml;cklich <br> widersprochen. Der Betreiber
+					beh&auml;lt sich f&uuml;r den Fall unverlangt <br> zugesandter
+					Werbe- oder Informationsmaterialien ausdr&uuml;cklich <br>
+					rechtliche Schritte vor.<br> <br>
+					<h3>Rechtswirksamkeit dieses Haftungsausschlusses</h3>
+					<br> Vorstehender Haftungsausschluss ist Teil des <br>
+					Internetangebots, von dem aus auf diese Seite verwiesen wurde. <br>
+					Sollten einzelne Regelungen oder Formulierungen dieses <br>
+					Haftungsausschlusses unwirksam sein oder werden, bleiben die
+					&uuml;brigen <br> Regelungen in ihrem Inhalt und ihrer
+					G&uuml;ltigkeit hiervon unber&uuml;hrt. <br> <br> <a
+						href="http://www.anwalt-seiten.de">Quelle: anwalt-seiten.de</a>
 				</div>
-				<div class="row">
-					<div class="12u">
-						<footer>
-							<a href="#second" class="button scrolly">Gravida tempor
-								lacinia</a>
-						</footer>
-					</div>
-				</div>
-			</div>
+			</header>
 		</div>
 	</section>
 
-	<!-- Fourth -->
-	<section id="fourth" class="main">
-		<header>
-
-			<h2>IMPRESSUM</h2>
-		</header>
-
-		<div class="content style4 featured">
-			<div class="content" id="impressum">
-				<p></p>
-				<b>Owner:</b>
-				<p>
-					Nick Kupka<br> Sch&auml;ferstrasse 20<br> 61381
-					Friedrichsdorf<br>
-				</p>
-				<b>E-Mail: nick.kupka(a t)gmail.com </b>
-				<p>All rights belong to Nick Kupka</p>
-				<hr>
-				<h3>Haftung f&uuml;r Inhalte</h3>
-				<br>Obwohl wir uns um Aktualit&auml;t, <br>
-				Vollst&auml;ndigkeit und Richtigkeit der Inhalte unserer Seiten
-				bem&uuml;hen, <br> k&ouml;nnen wir hierf&uuml;r keine Garantie
-				&uuml;bernehmen. Nach § 7 Absatz 1 TMG <br> sind wir als
-				Diensteanbieter f&uuml;r eigene Inhalte auf unseren Seiten <br>
-				nach den allgemeinen Gesetzen verantwortlich. Eine Verpflichtung zur
-				<br> &uuml;berwachung &uuml;bermittelter oder gespeicherter
-				fremder Informationen <br> besteht jedoch nicht (§§ 8-10 TMG).
-				Sobald uns Rechtsverst&ouml;ße <br> bekannt werden, werden wir
-				die entsprechenden Inhalte umgehend <br> entfernen. Eine
-				dahingehende Haftung wird jedoch erst ab dem <br> Zeitpunkt der
-				Kenntnis konkreter Rechtsverletzungen &uuml;bernommen. <br> <br>
-				<h3>Haftung f&uuml;r Links</h3>
-				<br> Unsere Seiten enthalten Links auf externe <br>
-				Webseiten Dritter. Auf die Inhalte dieser direkt oder indirekt <br>
-				verlinkten Webseiten haben wir keinen Einfluss. F&uuml;r die
-				Richtigkeit <br> der Inhalte ist immer der jeweilige Anbieter
-				oder Betreiber <br> verantwortlich, weshalb wir
-				diesbez&uuml;glich keinerlei Gew&auml;hr <br> &uuml;bernehmen.
-				Die fremden Webseiten haben wir zum Zeitpunkt der <br>
-				Verlinkung auf m&ouml;gliche Rechtsverst&ouml;ße
-				&uuml;berpr&uuml;ft. Zum Zeitpunkt der <br> Verlinkung waren
-				keinerlei Rechtsverletzungen erkennbar. Eine <br> st&auml;ndige
-				&uuml;berpr&uuml;fung s&auml;mtlicher Inhalte der von uns verlinkten
-				<br> Seiten ohne tats&auml;chliche Anhaltspunkte f&uuml;r einen
-				Rechtsverstoß <br> k&ouml;nnen wir nicht leisten. Falls uns
-				Rechtsverletzungen bekannt <br> werden, werden wir die
-				entsprechenden Links sofort entfernen. <br> <br>
-				<h3>Urheberrecht</h3>
-				<br> Die durch den Betreiber dieser Seite erstellten Inhalte <br>
-				und Werke auf diesen Webseiten unterliegen dem deutschen <br>
-				Urheberrecht. S&auml;mtliche Beitr&auml;ge Dritter sind als solche <br>
-				gekennzeichnet. Die Vervielf&auml;ltigung, Bearbeitung, Verbreitung
-				und <br> jede Art der Verwertung außerhalb der Grenzen des
-				Urheberrechts <br> bed&uuml;rfen der schriftlichen Zustimmung
-				des jeweiligen Autors bzw. <br> Erstellers. Kopien von diesen
-				Seiten sind nur f&uuml;r den privaten <br> Bereich gestattet,
-				nicht jedoch f&uuml;r kommerzielle Zwecke.<br> <br>
-				<h3>Datenschutz</h3>
-				<br> F&uuml;r die Sicherheit der Daten&uuml;bertragung im
-				Internet k&ouml;nnen wir keine <br> Gew&auml;hr
-				&uuml;bernehmen, insbesondere besteht bei der &uuml;bertragung von <br>
-				Daten per E-Mail die Gefahr des Zugriffs durch Dritte. Im Falle der
-				<br> Erhebung personenbezogener oder gesch&auml;ftlicher Daten
-				<br> (E-Mail-Adressen, Namen, Anschriften) auf unseren Seiten
-				erfolgt die <br> Preisgabe dieser Daten seitens des Nutzers
-				stets auf freiwilliger <br> Basis. Die Inanspruchnahme und
-				Bezahlung aller angebotenen Dienste <br> ist auch ohne Angabe
-				solcher Daten bzw. unter Angabe anonymisierter <br> Daten oder
-				eines Pseudonyms gestattet, soweit dies technisch m&ouml;glich <br>
-				und zumutbar ist. Einer Nutzung der im Impressum
-				ver&ouml;ffentlichten <br> Kontaktdaten durch Dritte zu
-				Werbezwecken wird hiermit ausdr&uuml;cklich <br> widersprochen.
-				Der Betreiber beh&auml;lt sich f&uuml;r den Fall unverlangt <br>
-				zugesandter Werbe- oder Informationsmaterialien ausdr&uuml;cklich <br>
-				rechtliche Schritte vor.<br> <br>
-				<h3>Rechtswirksamkeit dieses Haftungsausschlusses</h3>
-				<br> Vorstehender Haftungsausschluss ist Teil des <br>
-				Internetangebots, von dem aus auf diese Seite verwiesen wurde. <br>
-				Sollten einzelne Regelungen oder Formulierungen dieses <br>
-				Haftungsausschlusses unwirksam sein oder werden, bleiben die
-				&uuml;brigen <br> Regelungen in ihrem Inhalt und ihrer
-				G&uuml;ltigkeit hiervon unber&uuml;hrt. <br> <br> <a
-					href="http://www.anwalt-seiten.de">Quelle: anwalt-seiten.de</a>
-			</div>
-		</div>
-	</section>
-
-
-	<!-- Footer -->
 	<section id="footer">
 		<ul class="icons">
 			<li><a href="#" class="fa fa-twitter solo"><span>Twitter</span></a></li>
